<resources>
    <string name="app_name">Emercoin S</string>
    <string name="emercoin_secure">EMERCOIN SECURE</string>
    <string name="wallet">WALLET</string>
    <string name="generate_a_new_wallet">Generate a new wallet</string>
    <string name="restore_your_wallet">Restore your wallet</string>
    <string name="restore_your_wallet_header">RESTORE YOUR WALLET</string>
    <string name="generate_a_new_wallet_header">GENERATE A NEW WALLET</string>
    <string name="please_write_down_this_word">Please write down this word</string>
    <string name="next_word">Next word</string>
    <string name="start_over"><u>Start over</u></string>
    <string name="please_enter_all_the_seed_words_in_the_input_fields">Enter please all the seed phrase words to the input fields</string>
    <string name="next">Next</string>
    <string name="word_1">Word 1</string>
    <string name="word_7">Word 7</string>
    <string name="word_2">Word 2</string>
    <string name="word_8">Word 8</string>
    <string name="word_3">Word 3</string>
    <string name="word_9">Word 9</string>
    <string name="word_4">Word 4</string>
    <string name="word_10">Word 10</string>
    <string name="word_5">Word 5</string>
    <string name="word_11">Word 11</string>
    <string name="word_6">Word 6</string>
    <string name="word_12">Word 12</string>
    <string name="seed_generation_has_successfully_been_completed_you_can_use_the_emercoin_secure_wallet_now_thank_you">Seed phrase generation has successfully been completed. \nYou can use the \nEmercoin Secure Wallet now. \nThank you!</string>
    <string name="seed_restoring_has_successfully_been_completed_you_can_use_the_emercoin_secure_wallet_now_thank_you">Seed phrase restoring has successfully been completed. \nYou can use the \nEmercoin Secure Wallet now. \nThank you!</string>
    <string name="done">Done</string>
    <string name="please_save_words_on_paper_order_is_important_this_seed_will_allow_you_to_recover_your_wallet_in_case_of_phone_failure">Please save the words on paper (order is important). This seed phrase will allow you to recover your wallet in case of phone failure.</string>
    <string name="attention">ATTENTION!</string>
    <string name="never_disclose_your_seed_nnever_type_it_on_a_website_ndo_not_store_it_electronically_n_nif_you_understand_click_start">Never disclose your seed phrase.\nNever type it on a website.\nDo not store it electronically.\n\nIf you understand, click Start.</string>
    <string name="start">Start</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="error">Error</string>
    <string name="qr_incorrect">QR-Code is incorrect</string>
    <string name="copy_to_clipboard">Copied to clipboard</string>
    <string name="do_you_want_to_send">Do you want to send to this address\u0020</string>
    <string name="unconfirmed">Unconfirmed</string>
    <string name="enter_the_valid_address">Please enter the valid address</string>
    <string name="enter_a_pin">Enter a PIN</string>
    <string name="host">Host</string>
    <string name="port">Port</string>
    <string name="date_in_details_tx">Date:\u0020</string>
    <string name="address_in_details_tx">Address:\u0020</string>
    <string name="category_in_details_tx">Category:\u0020</string>
    <string name="amount_in_details_tx">Amount:\u0020</string>
    <string name="fee_in_details_tx">Fee:\u0020</string>
    <string name="transaction_id">Transaction ID:\u0020</string>
    <string name="block_in_details_tx">Block:\u0020</string>
    <string name="repeat">Repeat</string>
    <string name="close">Close</string>
    <string name="copyright">Copyright ©\u0020</string>
    <string name="word">Word\u0020</string>
    <string name="of12">\u0020of 12</string>
    <string name="currency">Currency</string>
    <string name="pin_code">Pin Code</string>
    <string name="host_servers">Host:\u0020</string>
    <string name="port_servers">Port:\u0020</string>
    <string name="action_settings">Settings</string>
    <string name="e_mail">E-mail</string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <string name="ok">Ok</string>
    <string name="aspanta_limited">Aspanta Limited</string>
    <string name="version">Version\u0020</string>
    <string name="dashboard">Dashboard</string>
    <string name="send_coins">Send Coins</string>
    <string name="receive_coins">Receive Coins</string>
    <string name="settings">Settings</string>
    <string name="third_party_licenses">Third-Party Licenses</string>
    <string name="logout">Close the wallet</string>
    <string name="privacy_policy_menu">Privacy Policy</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="dashboard_logo">dashboard_logo</string>
    <string name="mobile_wallet">MOBILE WALLET</string>
    <string name="my_balance">My Balance</string>
    <string name="emercoin">EMERCOIN</string>
    <string name="emc">EMC</string>
    <string name="usd">USD</string>
    <string name="bitcoin">BITCOIN</string>
    <string name="btc">BTC</string>
    <string name="iconlivecoin">iconLivecoin</string>
    <string name="iconbtc">IconBTC</string>
    <string name="my_addresses">My Addresses</string>
    <string name="label">Label</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="please_wait">Please wait</string>
    <string name="save">Save</string>
    <string name="edit_address">Edit address</string>
    <string name="question_mark">\?</string>
    <string name="scan_qr_code">Scan QR-Code</string>
    <string name="enter_an_address">Enter an address</string>
    <string name="list_of_recipients">List of recipients</string>
    <string name="there_are_no_addresses">There are no addresses</string>
    <string name="address_book">ADDRESS\nBOOK</string>
    <string name="address">Address</string>
    <string name="new_contact">New contact</string>
    <string name="delete_contact">Delete contact</string>
    <string name="delete">Delete</string>
    <string name="edit_contact">Edit contact</string>
    <string name="fee">Fee (BTC/Kb):</string>
    <string name="receive_btc">Receive BTC</string>
    <string name="receive_emc">Receive EMC</string>
    <string name="amount">Amount:</string>
    <string name="confirm_operation">Confirm operation</string>
    <string name="yes">Yes</string>
    <string name="operation_was_successfully_completed">Operation was successfully completed</string>
    <string name="transaction_history">Transaction History</string>
    <string name="address_book_menu">Address Book</string>
    <string name="about">About</string>
    <string name="legal">Legal</string>
    <string name="repair">Repair</string>
    <string name="allowedCharacters">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz</string>
    <string name="there_is_no_any_transactions">There is no any transaction</string>
    <string name="history">History</string>
    <string name="operations">Operations</string>
    <string name="servers">Servers</string>
    <string name="addresses_for_the_change">Addresses for change</string>
    <string name="address_for_the_change">Address for change</string>
    <string name="address_for_the_change_in_emercoin">Address for change in Emercoin</string>
    <string name="address_for_the_change_in_bitcoin">Address for change in Bitcoin</string>
    <string name="the_server_for_emercoin">The server for Emercoin</string>
    <string name="the_server_for_bitcoin">The server for Bitcoin</string>
    <string name="set_a_pin">Set a PIN</string>
    <string name="confirm_a_pin">Confirm a PIN</string>
    <string name="confirm">Confirm</string>
    <string name="would_you_like_to_set_up_a_pin">Would you like to\nset up a PIN?</string>
    <string name="would_you_like_to_set_up_fingerprint">Would you like to\nset up a Fingerprint?</string>
    <string name="text_for_about">
        Emercoin Secure Wallet is an easy-to-use and lightweight crypto wallet based on the Electrum protocol. It currently supports two cryptocurrencies, Emercoin and Bitcoin, stored together in the same wallet.\n\nThe wallet is:\nSecure, with private keys stored on the users device and the wallet itself is protected with a seed phrase, and\nLightweight, because it does not keep a local copy of the blockchain.\n\nYou can also use the wallet with your own Electrum servers.\n\nEmercoin Secure Wallet is available for smartphones, tablets and desktop computers. You can use the same wallet on several devices at once.\n
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="could_not_connect">Could not connect to the server</string>
    <string name="could_not_connect_for">Could not connect to the server for\u0020</string>
    <string name="aspanta_limited_2017">© Aspanta Limited, 2018</string>
    <string name="self_detail">Self</string>
    <string name="send_detail">Send</string>
    <string name="receive_detail">Receive</string>
    <string name="na">(n/a)</string>
    <string name="insufficient_funds">Insufficient funds</string>
    <string name="the_transaction_was_rejected_by_network_rules">The transaction was rejected by network rules</string>
    <string name="advanced_server_settings"><u>Advanced server settings</u></string>
    <string name="wrong_seed_phrase">Wrong seed phrase</string>
    <string name="are_you_sure">Are you sure want to close the wallet?</string>
    <string name="recommended">Recommended:</string>
    <string name="custom">Custom:</string>
    <string name="minimum_0_00001">Minimum 0.00001</string>
    <string name="private_key">Private key</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="pin_code_fingerprint_not_recognized">Fingerprint not recognized</string>
</resources>