<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home_dashboard"
        android:enabled="true"
        android:title="@string/dashboard"
        android:icon="@mipmap/ic_dashboard_bottom_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_send"
        android:enabled="true"
        android:title="@string/send"
        android:icon="@mipmap/ic_send_bottom"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_get_dashboard"
        android:enabled="true"
        android:title="@string/receive"
        android:icon="@mipmap/ic_get_bottom"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_history_dashboard"
        android:enabled="true"
        android:title="@string/history"
        android:icon="@mipmap/ic_transaction_history"
        app:showAsAction="ifRoom" />
</menu>