<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:ext="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical"
              tools:context=".ui.fragment.fragmentAbout.AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:elevation="3dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="24dp">

        <ImageView
            android:id="@+id/dashboard_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/dashboard_icon"
            android:backgroundTint="@color/colorPrimary"
            android:contentDescription="@string/dashboard_logo"/>

        <TextView
            android:id="@+id/dashboard_header_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/emercoin_secure"
            android:textColor="@color/colorPrimary"
            android:textSize="32sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/dashboard_header_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/mobile_wallet"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/textSizeXLarge"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_for_about"
                android:textColor="@color/black"
                android:textSize="@dimen/textSizeMedium"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/copyright"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textSizeMedium"/>

                <TextView
                    android:id="@+id/tv_copyright_aspanta_ltd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aspanta_limited"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/textSizeMedium"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=", 2018"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textSizeMedium"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
