<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/forgot_password_margin"
    app:cardCornerRadius="35dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/padding_restore_password">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:textColor="@android:color/background_dark"
            android:textSize="@dimen/textSizeLarge"/>

        <TextView
            android:id="@+id/tv_text"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="24dp"
            android:paddingTop="16dp"
            android:text="@string/operation_was_successfully_completed"
            android:textSize="@dimen/textSizeLarge"/>

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:background="@drawable/button_ok_dialog_restore_password_selector"
            android:text="@string/ok"
            android:backgroundTint="@color/buttonCancelBitcoin"
            android:textColor="@drawable/text_selector"
            android:textSize="@dimen/textSizeLarge"/>

    </LinearLayout>
</android.support.v7.widget.CardView>