<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/forgot_password_margin"
    app:cardCornerRadius="35dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/padding_restore_password">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_restore_password"
            android:layout_marginTop="@dimen/padding_restore_password"
            android:text="@string/edit_contact"
            android:textColor="@android:color/background_dark"
            android:textSize="@dimen/textSizeLarge"/>

        <EditText
            android:id="@+id/et_edit_label_address_book_emercoin"
            android:layout_width="@dimen/width_of_auth_views"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_restore_password"
            android:fontFamily="sans-serif-light"
            android:hint="@string/label"
            android:inputType="text"
            android:maxLength="50"
            android:textColorHint="@color/buttonDisabled"/>

        <EditText
            android:id="@+id/et_edit_address_address_book_emercoin"
            android:layout_width="@dimen/width_of_auth_views"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_restore_password"
            android:fontFamily="sans-serif-light"
            android:hint="@string/address"
            android:inputType="text"
            android:maxLength="34"
            android:textColorHint="@color/buttonDisabled"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_restore_password"
            android:layout_marginTop="@dimen/padding_restore_password"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_save_contact_address_book_emercoin"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:background="@drawable/button_round_add_emc_selector"
                android:enabled="false"
                android:fontFamily="sans-serif"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="@dimen/textSizeMedium"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/white"/>

            <Button
                android:id="@+id/btn_cancel_address_book_emercoin"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:background="@drawable/btn_cancel_new_address_light_emc_bg"
                android:fontFamily="sans-serif"
                android:backgroundTint="@color/buttonCancelBitcoin"
                android:text="@string/cancel"
                android:textColor="@drawable/text_selector"
                android:textSize="@dimen/textSizeMedium"/>

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>